--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "argparse": "^2.0.1",
     "axios": "^1.3.4",
+    "axios-retry": "^3.4.0",
     "eventsource-parser": "^0.1.0",
     "gpt-3-encoder": "^1.1.4"
   }
