--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "ES2022",
         "declaration": true,
         "outDir": "dist",
-        "sourceMap": true,
+        "sourceMap": false,
         "strict": true,
         "moduleResolution": "node"
     }
