--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gpt-persona",
-  "version": "0.1.4",
-  "description": "Wrapper for ChatGPT API",
+  "version": "0.1.5",
+  "description": "A small library for managing different \"personas\" for OpenAI Chat API.",
   "files": [
     "/dist",
     "/persona"
